# captrs

./: .gitignore  Cargo.toml  README.md
examples/: avg.rs  qoi.rs
src/: lib.rs
