[package]
name = "captrs"
version = "0.3.0"
authors = ["jojo <jo@jo.zone>"]
description = "Cross-platform screen capture library"
repository = "https://github.com/bryal/captrs"
readme = "README.md"
keywords = ["Windows", "Linux", "screen", "record", "capture"]
license = "AGPL-3.0"
edition = "2018"

[target.'cfg(not(windows))'.dependencies]
x11cap = "0.4.1"

[target.'cfg(windows)'.dependencies]
dxgcap = "0.2.1"

[dev-dependencies]
shuteye = "0.2"
