[package]
name = "captrs2"
version = "0.1.0"
authors = ["jojo <jo@jo.zone>", "TommyGymer <github@tgymer.uk>"]
description = "An updated version of captrs, a cross-platform screen capture library"
repository = "https://github.com/TommyGymer/captrs"
readme = "README.md"
keywords = ["Windows", "Linux", "screen", "record", "capture"]
license = "AGPL-3.0"
edition = "2018"

[target.'cfg(not(windows))'.dependencies]
x11cap = "0.4.1"

[target.'cfg(windows)'.dependencies]
dxgcap = "0.2.4"

[dev-dependencies]
shuteye = "0.3.3"
qoi = "^0.4.1"